# blanat

./: README.md  gen.py  input.txt  main.cpp  output.txt
.github/workflows/: benchmark.yml
submissions/: .gitignore  ZAIRIyoussef.py  azihassan.cpp  azihassan.d  main.cpp
submissions/AITYOUB-Abdelmoughit/: main.py
submissions/AbdallahRdf/: City.java  Main.java  Product.java
submissions/AbdelHousni/: Main.java
submissions/AbdelaliELMANTAGUI/: Main.java
submissions/AbidarYassine/: Main.java
submissions/Amine-H/: main.js
submissions/AnasImloul/: main.cpp  main_v2.cpp
submissions/Anir-Ln/: solution.cpp
submissions/Archesper/: main.js  output.txt
submissions/AssmaaM/: Solution.py
submissions/BadRequest/: script.js
submissions/BakrAsskali/: main.py
submissions/BerqiaMouad/: solution.cpp  solution.py
submissions/ERR-Elhim/: main.cpp
submissions/ElMoulaouiAnouar/: index.js
submissions/Hamdane-yassine/: solution.rs
submissions/HamzaMPSY/: submission.cpp
submissions/HelloWorldszz/: main.py
submissions/ILKAY-BRAHIM/: main.c  main.cpp
submissions/Ibourk-El/: index.js
submissions/KABILA-Anas/: solution.cpp
submissions/Ktounoussi/: Main.java
submissions/LaamimAyoub/: solution.py
submissions/MedddAmine/: Main.cpp
submissions/Moohaa/: Main.java
submissions/Muha/: blan_solution.c
submissions/NEAZYIT/: solution.py
submissions/NotAsheraf/: solution.rs
submissions/REp007/: main.py
submissions/RedOne KaiTo/: main.go
submissions/Smartdev110/: Main.java
submissions/ismailtlem/: gblabla_coding_challenge.py  pyproject.toml
(+113 files in other folders)
