[tool.poetry]
name = "gblabla-coding-challenge"
version = "0.1.0"
description = ""
authors = ["Ismailtlem <ismail.tlemcani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
